--- a/Test.ipynb
+++ b/Test.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,18 +131,24 @@
      "output_type": "stream",
      "text": [
       "Merekam...\n",
-      " saya pakai OBS dan Zoom ya ini OBS lalu\n",
+      " menariknya banyak banget yang susah untuk menerapkan ini karena mereka berasa mereka sudah pintar mereka berasa gue udah tahu pengetahuan ini masa gue pura-pura bego sih bro tapi coba kalian pikirkan\n",
       "Hasil transkripsi disimpan ke hasil_transkripsi.txt\n",
-      "File lama output_1739848422.wav telah dihapus.\n",
-      " saya coba new meeting yang bisa juga masuk di meeting yang lain\n",
+      "File lama output_1739951660.wav telah dihapus.\n",
+      " yang kalian ingin ke aku sisi, gimana caranya kalian bisa memahami kan? Kalian harus bisa mendapatkan sekian banyak point of view, pandangan terhadap topik yang kalian pengen aku sisi, untuk bener-bener memahami.\n",
       "Hasil transkripsi disimpan ke hasil_transkripsi.txt\n",
-      "File lama output_1739848438.wav telah dihapus.\n",
-      " Nah ini ada audio, audionya disini Biasanya saya gunakan speaker, speaker outputnya ke cable VB\n",
+      "File lama output_1739951676.wav telah dihapus.\n",
+      " Mahakon jam terbang, kuantitas untuk menuju ke sana. Bener-bener terjun ke topik dan pengetahuan yang kalian ingin akusisi. Walaupun kompleks, nggak apa-apa guys. Pokoknya masuk dulu. Dibandingkan kalian itu.\n",
       "Hasil transkripsi disimpan ke hasil_transkripsi.txt\n",
-      "File lama output_1739848454.wav telah dihapus.\n",
-      " kita bisa gunakan VB cable nya disini setelah seperti itu misalnya ada orang berbicara nanti di zoom, dia langsung\n",
+      "File lama output_1739951691.wav telah dihapus.\n",
+      " harus bisa ngelawan kita punya otak sendiri. Karena pada umumnya, begitu kita menerima informasi, semakin lama harinya, semakin rendah juga kita punya retention.\n",
       "Hasil transkripsi disimpan ke hasil_transkripsi.txt\n",
-      "File lama output_1739848470.wav telah dihapus.\n",
+      "File lama output_1739951706.wav telah dihapus.\n",
+      " Website yang gua barusan bagiin namanya apa? Yup, mayoritas udah lupa kan? So disini untuk kalian bisa ngelawan kalian punya otak yang sering lupa ini,\n",
+      "Hasil transkripsi disimpan ke hasil_transkripsi.txt\n",
+      "File lama output_1739951721.wav telah dihapus.\n",
+      " ada pembuktian secara sains ya guys dimana manusia itu kalau misalkan cuma mendengar, melihat, membaca itu sangat gampang untuk berubah karena kenapa?\n",
+      "Hasil transkripsi disimpan ke hasil_transkripsi.txt\n",
+      "File lama output_1739951736.wav telah dihapus.\n",
       "Perekaman selesai.\n"
      ]
     }
