--- a/iseng.ipynb
+++ b/iseng.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,46 +91,44 @@
     "        # Initialize the ChatGroq model using the provided API key and a specific model.\n",
     "        \n",
     "        self.llm = ChatGroq(groq_api_key=GROQ_API_KEY, model_name=\"llama-3.3-70b-versatile\")\n",
+    "        self.default_suggestion_system_prompt = \"You are a useful assistant that accepts text input in Indonesian and is designed to support the interviewer. Based on the conversation text provided, create up to 5 in-depth follow-up questions using Indonesian. These questions will help the interviewer explore the candidate's experience, problem-solving abilities, or other relevant areas in more depth. Make sure the 2 final questions are questions that are relevant to the topic of conversation and the 3 questions at the beginning to assess how persistent the candidate is based on their answers in the interview based on the following grit:\"\n",
     "        \n",
-    "        # Define the prompt template for generating suggestions.\n",
-    "        self.gen_suggestion_template = ChatPromptTemplate.from_messages(\n",
+    "\n",
+    "    def generate_suggestion(self, text, additional_prompt=\"\"):\n",
+    "        # Gabungkan prompt default dengan tambahan user\n",
+    "        full_system_prompt = self.default_suggestion_system_prompt + \" \" + additional_prompt\n",
+    "\n",
+    "        # Membuat prompt template secara dinamis\n",
+    "        gen_suggestion_template = ChatPromptTemplate.from_messages(\n",
     "            [\n",
-    "                (\n",
-    "                    \"system\",\n",
-    "                    \"You are a helpful assistant that receives text input in Indonesian and designed to support interviewers. Given the conversation text provided, generate up to 3 insightful follow-up questions using indonesian language. These questions should help the interviewer explore the candidate's experience, problem-solving abilities, or other relevant areas more deeply. Ensure the questions are relevant, concise, and written in Indonesian to suit the context.\"\n",
-    "                ),\n",
-    "                (\n",
-    "                    \"human\",\n",
-    "                    \"Input:\\n{text}\\nPlease analyze this conversation and generate follow-up questions based on the interview flow.\"\n",
-    "                )\n",
+    "                (\"system\", full_system_prompt),  # System message yang sudah diperbarui\n",
+    "                (\"human\", f\"Input:\\n{text}\\nnPlease analyze this conversation and generate follow-up questions based on the interview flow.\")\n",
     "            ]\n",
     "        )\n",
     "\n",
-    "        # Create a suggestion generation chain by combining the template and the model.\n",
-    "        self.generate_suggestion_chain = self.gen_suggestion_template | self.llm\n",
-    "\n",
-    "    def generate_suggestion(self, text):\n",
-    "        # Invoke the suggestion generation chain with the provided text and return the response.\n",
-    "        response = self.generate_suggestion_chain.invoke({'text':text}).content\n",
+    "        # Buat chain dengan template dinamis\n",
+    "        generate_suggestion_chain = gen_suggestion_template | self.llm\n",
+    "        \n",
+    "        # Invoke chain\n",
+    "        response = generate_suggestion_chain.invoke({'text': text}).content\n",
     "        return response\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
     "from utils import Utils\n",
-    "from chatbot import ChatBot\n",
-    "utility = Utils()\n",
-    "bot = ChatBot()"
+    "utility = Utils()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,16 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Interviewer: \"Bagaimana Anda menangani masalah overfitting?\"\n",
+      "Saya selalu mengikuti prinsip clean code dan menggunakan standar coding seperti PEP 8 untuk Python. Selain itu, saya rutin melakukan code review bersama tim, menulis unit test, serta mendokumentasikan kode agar lebih mudah dipahami oleh rekan kerja.\n",
       "\n",
-      "Candidate: \"Untuk mengurangi overfitting, beberapa metode yang umum digunakan adalah regularisasi, pengurangan kompleksitas model, dan penggunaan teknik seperti cross-validation untuk memastikan model tidak terlalu sesuai dengan data pelatihan.\"\n"
+      "HRD:\n",
+      "Terakhir, mengapa Anda tertarik bergabung dengan perusahaan kami?\n",
+      "\n",
+      "Candidate:\n",
+      "Saya tertarik karena perusahaan ini memiliki budaya kerja yang inovatif dan mengembangkan produk berbasis teknologi terbaru. Saya ingin berkontribusi dalam tim untuk menciptakan solusi yang berdampak luas, sekaligus terus mengembangkan skill saya sebagai programmer.\n"
      ]
     }
    ],
@@ -168,28 +170,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Generate suggestions using the bot's generate_suggestion method\n",
-    "response = bot.generate_suggestion(content)"
+    "additional_text = \"Integrity, Customer Oriented, Competitive, Time Work, visioner\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot = ChatBot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate suggestions using the bot's generate_suggestion method\n",
+    "response = bot.generate_suggestion(content, additional_text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Berikut beberapa pertanyaan lanjutan yang dapat membantu interviewer untuk lebih memahami pengalaman dan kemampuan candidate:\n",
+      "Berikut adalah 5 pertanyaan follow-up yang dapat membantu memahami lebih dalam tentang pengalaman, kemampuan, dan tujuan kandidat:\n",
       "\n",
-      "1. \"Apakah Anda pernah mengalami kasus di mana regularisasi dan pengurangan kompleksitas model tidak cukup efektif untuk mengatasi overfitting? Jika ya, bagaimana Anda menanganinya?\"\n",
-      "2. \"Bagaimana Anda memilih jenis regularisasi yang tepat (misalnya L1 atau L2) untuk mengatasi overfitting dalam suatu model? Apakah ada pertimbangan khusus yang Anda gunakan?\"\n",
-      "3. \"Dalam penggunaan cross-validation, bagaimana Anda menentukan jumlah fold yang optimal untuk menghindari overfitting dan underfitting? Apakah ada aturan umum yang Anda ikuti dalam menentukan jumlah fold?\"\n"
+      "1. Bagaimana Anda menghadapi situasi ketika kode yang Anda tulis tidak sesuai dengan standar coding yang telah ditetapkan, dan apa yang Anda lakukan untuk memperbaikinya? (Mengukur integritas)\n",
+      "2. Dalam melakukan code review, bagaimana Anda memastikan bahwa umpan balik yang Anda berikan kepada rekan kerja dapat diterima dan dimanfaatkan dengan baik, serta bagaimana Anda menangani jika ada perbedaan pendapat tentang kode yang ditinjau? (Mengukur kemampuan berorientasi pada pelanggan)\n",
+      "3. Apa yang Anda lakukan ketika Anda menghadapi tantangan dalam mengerjakan proyek yang memiliki deadline ketat, dan bagaimana Anda memastikan bahwa Anda dapat menyelesaikannya tepat waktu? (Mengukur kemampuan kompetitif dan manajemen waktu)\n",
+      "4. Bagaimana Anda melihat peran Anda dalam menciptakan solusi yang berdampak luas di perusahaan kami, dan apa yang Anda harapkan dapat dicapai dalam waktu 6-12 bulan setelah bergabung dengan tim kami? (Mengukur visi dan tujuan)\n",
+      "5. Apa yang Anda ketahui tentang budaya kerja inovatif di perusahaan kami, dan bagaimana Anda berencana untuk berkontribusi dalam mengembangkan produk berbasis teknologi terbaru di perusahaan kami? (Mengukur pemahaman tentang perusahaan dan visi)\n",
+      "\n",
+      "Pertanyaan-pertanyaan ini dapat membantu memahami lebih dalam tentang kemampuan, pengalaman, dan tujuan kandidat, serta sejauh mana mereka memahami tentang perusahaan dan budaya kerjanya.\n"
      ]
     }
    ],
